tests/compile/schema_types.stderr
error[E0277]: Columns with type `Option<i64>` can not be checked for equality
 --> tests/compile/schema_types.rs:3:1
  |
3 | #[schema(Schema)]
  | ^^^^^^^^^^^^^^^^^ the trait `rust_query::value::EqTyp` is not implemented for `Option<i64>`
  |
  = note: `EqTyp` is also implemented for all table types
  = help: the following other types implement trait `rust_query::value::EqTyp`:
            String
            Vec<u8>
            bool
            f64
            i64
            jiff::timestamp::Timestamp
  = note: required for `Option<Option<i64>>` to implement `DbTyp`
  = note: this error originates in the attribute macro `schema` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: Columns with type `Option<i64>` can not be checked for equality
 --> tests/compile/schema_types.rs:3:1
  |
3 | #[schema(Schema)]
  | ^^^^^^^^^^^^^^^^^ the trait `rust_query::value::EqTyp` is not implemented for `Option<i64>`
  |
  = note: `EqTyp` is also implemented for all table types
  = help: the following other types implement trait `rust_query::value::EqTyp`:
            String
            Vec<u8>
            bool
            f64
            i64
            jiff::timestamp::Timestamp
  = note: required for `Option<Option<i64>>` to implement `DbTyp`
note: required by a bound in `Expr`
 --> src/value.rs
  |
  | pub struct Expr<'column, S, T: DbTyp> {
  |                                ^^^^^ required by this bound in `Expr`
  = note: this error originates in the attribute macro `schema` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: Columns with type `Option<i64>` can not be checked for equality
 --> tests/compile/schema_types.rs:8:21
  |
3 | #[schema(Schema)]
  | ----------------- required by a bound introduced by this call
...
8 |         pub nested: Option<Option<i64>>,
  |                     ^^^^^^ the trait `rust_query::value::EqTyp` is not implemented for `Option<i64>`
  |
  = note: `EqTyp` is also implemented for all table types
  = help: the following other types implement trait `rust_query::value::EqTyp`:
            String
            Vec<u8>
            bool
            f64
            i64
            jiff::timestamp::Timestamp
  = note: required for `Option<Option<i64>>` to implement `IntoExpr<'static, v0::Schema>`
  = note: required for `Option<Option<i64>>` to implement `SchemaType<v0::Schema>`
note: required by a bound in `TypBuilder::<S>::col`
 --> src/schema/from_macro.rs
  |
  |     pub fn col<T: SchemaType<S>>(&mut self, name: &'static str, span: (usize, usize)) {
  |                   ^^^^^^^^^^^^^ required by this bound in `TypBuilder::<S>::col`

error[E0277]: Columns with type `Option<i64>` can not be checked for equality
 --> tests/compile/schema_types.rs:9:23
  |
3 | #[schema(Schema)]
  | ----------------- required by a bound introduced by this call
...
9 |         pub optional: Option<i64>,
  |                       ^^^^^^ the trait `rust_query::value::EqTyp` is not implemented for `Option<i64>`
  |
  = note: `EqTyp` is also implemented for all table types
  = help: the following other types implement trait `rust_query::value::EqTyp`:
            String
            Vec<u8>
            bool
            f64
            i64
            jiff::timestamp::Timestamp
note: required by a bound in `TypBuilder::<S>::check_unique_compatible`
 --> src/schema/from_macro.rs
  |
  |     pub fn check_unique_compatible<T: EqTyp>(&mut self) {}
  |                                       ^^^^^ required by this bound in `TypBuilder::<S>::check_unique_compatible`

error[E0277]: Columns with type `Option<i64>` can not be checked for equality
 --> tests/compile/schema_types.rs:8:13
  |
3 | #[schema(Schema)]
  | ----------------- required by a bound introduced by this call
...
8 |         pub nested: Option<Option<i64>>,
  |             ^^^^^^ the trait `rust_query::value::EqTyp` is not implemented for `Option<i64>`
  |
  = note: `EqTyp` is also implemented for all table types
  = help: the following other types implement trait `rust_query::value::EqTyp`:
            String
            Vec<u8>
            bool
            f64
            i64
            jiff::timestamp::Timestamp
  = note: required for `Option<Option<i64>>` to implement `DbTyp`

error[E0277]: Columns with type `Option<i64>` can not be checked for equality
 --> tests/compile/schema_types.rs:8:21
  |
3 | #[schema(Schema)]
  | ----------------- required by a bound introduced by this call
...
8 |         pub nested: Option<Option<i64>>,
  |                     ^^^^^^ the trait `rust_query::value::EqTyp` is not implemented for `Option<i64>`
  |
  = note: `EqTyp` is also implemented for all table types
  = help: the following other types implement trait `rust_query::value::EqTyp`:
            String
            Vec<u8>
            bool
            f64
            i64
            jiff::timestamp::Timestamp
  = note: required for `Option<Option<i64>>` to implement `DbTyp`
note: required by a bound in `Reader::col`
 --> src/writable.rs
  |
  |     pub fn col<T: DbTyp>(&mut self, name: &'static str, val: T) {
  |                   ^^^^^ required by this bound in `Reader::col`
